--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,7 @@
 @import "./styles/vars.scss";
 @import "./styles/mixins.scss";
 @import "./styles/typo.scss";
+
+body {
+	background-color: #000000;
+}
